# Ink-platformer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Constants.hpp  Game.hpp  Player.hpp
include/engine/: Entity.hpp  Map.hpp  Tile.hpp
include/system/: ResourceHolder.hpp  ResourceHolder.tpp  ResourceIDs.hpp
src/: Game.cpp  Player.cpp  main.cpp
src/engine/: Entity.cpp  Map.cpp  Tile.cpp
